updated CSS responsiveness

--- a/styles.css
+++ b/styles.css
@@ -16,15 +16,14 @@ body {
 
 .keyboard {
     display: grid;
-    grid-template-columns: repeat(20, minmax(auto, 1.4em));
-    grid-auto-rows: 3.75em;
+    grid-template-columns: repeat(20, minmax(auto, 1.8em));
+    grid-auto-rows: 5em;
     gap: .38em;
     justify-content: center;
-    flex-grow: 0.15;
 }
 
 .key {
-    font-size: inherit;
+    font-size: 1.6em;
     grid-column: span 2;
     border: none;
     padding: 0;
@@ -77,7 +76,7 @@ body {
     display: grid;
     justify-content: center;
     align-content: center;
-    flex-grow: 1;
+    flex-grow: .6;
     grid-template-columns: repeat(5, 7em);
     grid-template-rows: repeat(6, 7em);
     gap: .25em;
@@ -219,6 +218,10 @@ body {
     .keyboard {
         grid-auto-rows: 3.75em;
         flex-grow: 0.15;
+    }
+
+    .key {
+        font-size: 1.6em;
     }
 
     .tile {
